--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="active" href="/">Ana səhifə</a></li>
-                                        <li><a href="/category">Mövzular</a></li>
+                                        <li><a href="/allBlogs">Məqalələr</a></li>
                                         <li><a href="/about">Haqqımızda</a></li>
                                         <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
@@ -101,9 +101,14 @@
                                             <div class="main-menu  d-none d-lg-block pull-right text-right">
                                                 <nav>
                                                     <ul id="navigation ">
-                                                        <li style=" margin-left: 20px !important;"><a style="font-size: 20px;" href="#">Welcome, {{name}} <i class="ti-angle-down"></i></a>
+                                                        <li style=" margin-left: 20px !important;"><a
+                                                                style="font-size: 20px;" href="#">Welcome, {{name}} <i
+                                                                    class="ti-angle-down"></i></a>
                                                             <ul class="submenu">
-                                                                <li><a href="/logout"><button style="width: 100%;"
+                                                                <li><a href="/blog_write"><button style="width: 100%; margin:5px 0 0 0;"
+                                                                            class="btn btn-success ">Write a Blog</button></a>
+                                                                </li>
+                                                                <li><a href="/logout"><button style="width: 100%; margin: 0 0 5px 0;"
                                                                             class="btn btn-success ">Logout</button></a>
                                                                 </li>
                                                             </ul>
