90% completed user side

--- a/templates/post.html
+++ b/templates/post.html
@@ -60,7 +60,7 @@
 						<a href="author.html"><img style="margin-left:30px" class="author-thumb" src=/static/{{writer.profile_pic}} alt="Sal"></a>
 					</div>
 					<div style="margin-top:10px" class="col-md-10">
-						<a class="link-dark" href="author.html">{{writer.name}} {{writer.surname}}</a><a href="#" class="btn follow">Writer</a>
+						<a class="link-dark" href="author.html">{{writer.name}} {{writer.surname}}</a><a href="/author/{{writer.id}}" class="btn follow">Writer</a>
 						<!--<span class="author-description">Founder of WowThemes.net and creator of <b>"Mediumish"</b> theme that you're currently previewing. Developing professional premium themes, templates, plugins, scripts since 2012.</span> -->
 						<div>
 							<span class="post-date">{{post.date_created.strftime('%d-%m-%Y')}}</span><span class="dot"></span><span class="post-read">{{post.read_time}} min read</span>
