--- a/templates/authors.html
+++ b/templates/authors.html
@@ -3,6 +3,11 @@
 
 {% block head %}
 <title>Pragmatech Blogs| Main</title>
+<style>
+    .card{
+        display: inline !important;
+    }
+</style>
 {% endblock %}
 
 {% block body %}
@@ -19,30 +24,30 @@
 	<div class="card-columns listfeaturedtag">
 
 	<!-- begin post -->
-	{% for (tb, tx) in top_blog %}
+	<div class="row">
+        <div class="col-md-12">
+            {% for (author, post) in authors %}
 		<div class="card">
 			<div class="row">
 				<div class="col-md-5 wrapthumbnail">
-					{% set cover_photo = url_for('static', filename=tb.cover_photo) %}
-					<a href="/blog/{{tb.id}}">
-						<div class="thumbnail" style="background-image:url('{{cover_photo}}');">
+					<a href="/author/{{author.id}}">
+						<div class="thumbnail" style="background-image:url('/static/{{author.profile_pic}}');">
 						</div>
 					</a>
 				</div>
 				<div class="col-md-7">
 					<div class="card-block">
-						<h2 class="card-title"><a href="/blog/{{tb.id}}">{{tb.title | truncate(50)}}</a></h2>
-						<h4 class="card-text">{{tb.content | truncate(150, False, '...', 0) | safe}}</h4>
+						<h2 class="card-title"><a href="/author/{{author.id}}">{{author.name}} {{author.surname}}</a></h2>
+                        <h4 class="card-text" style="margin-top: 40px;"> • Author</h4>
+                        <h4 class="card-text"> • Pragmatech user since {{author.date_created.strftime('%d-%m-%Y')}}</h4>
+                        {% if post > 1 %}
+                        <h4 class="card-text"> • Author has {{post}} approved posts in total</h4>
+                        {% elif post == 1 %}
+                        <h4 class="card-text"> • Author has {{post}} approved post in total</h4>
+                        {% endif %}
 						<div class="metafooter">
 							<div class="wrapfooter">
-								<span class="meta-footer-thumb">
-								<a href="author.html"><img class="author-thumb" src="{{url_for('static', filename=tx.profile_pic)}}" alt="Sal"></a>
-								</span>
-								<span class="author-meta">
-								<span class="post-name"><a href="author.html">{{tx.name}} {{tx.surname}}</a></span><br/>
-								<span class="post-date">{{tb.date_created.strftime('%d-%m-%Y')}}</span><span class="dot"></span><span class="post-read">{{tb.read_time}} min read</span>
-								</span>
-								<span class="post-read-more"><a href="/blog/{{tb.id}}" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+								<span class="post-read-more"><a href="" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
 							</div>
 						</div>
 					</div>
@@ -51,6 +56,8 @@
 		</div>
 		<!-- end post -->
 	{% endfor %}	
+        </div>
+    </div>
 
 
 	</div>
