--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 			{% elif name != 'Guest' -%}
 			<li style="margin-left: 10px; width: 35px;" class="nav-item">
 				<span class="meta-footer-thumb">
-					<a href="author.html"><img class="author-thumb" src="/static/{{pp}}" alt="Sal"></a>
+					<a href="author/{{id}}"><img class="author-thumb" src="/static/{{pp}}" alt="Sal"></a>
 				</span>
 			</li>
 			<li class="nav-item">
