--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -9,95 +9,115 @@
 
 {% block body %}
 
-    {% with messages = get_flashed_messages() %}
+{% with messages = get_flashed_messages() %}
 
-        {% if messages %}
-            {% for message in messages %}
+{% if messages %}
+{% for message in messages %}
 
-             <!--invalid input message-->
+<!--invalid input message-->
 
-            <div class="alert alert-success alert-dismissable" role="alert">
+<div class="alert alert-success alert-dismissable" role="alert">
 
-                <button type="button" class="close" data-dismiss='alert' aria-label="close">
+    <button type="button" class="close" data-dismiss='alert' aria-label="close">
 
-                <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
 
-                </button>
-                {{message}}
+    </button>
+    {{message}}
 
-            </div>
+</div>
 
 
-            {% endfor %}
+{% endfor %}
 
-        {% endif %}
+{% endif %}
 
-    {% endwith %}
+{% endwith %}
 
-    
 
-        <!-- Log In page -->
-        <div class="container">
-            <div class="row vh-100 ">
-                <div style="margin-left: 300px;" class="col-6 align-self-center">
-                    <div class="auth-page">
-                        <div class="card auth-card shadow-lg">
-                            <div style="width: 500px;" class="card-body">
-                                <div class="px-3">
-                                    
-                                    <div class="text-center auth-logo-text">
-                                        <h4 class="mt-0 mb-3 mt-5">Pragmatech Blog</h4>
-                                        <p class="text-muted mb-0">Login Page</p>  
-                                    </div> <!--end auth-logo-text-->  
-    
-                                    
-                                    <form class="form-horizontal auth-form my-4" method="POST" novalidate >
-                                        {{form.csrf_token}}
 
-                                        <div class="form-group">
-                                            <label for="username">Username</label>
-                                            <div class="input-group mb-3">                                                                                                            
-                                                <input type="text" class="form-control" name="username" placeholder="Enter username" required>
-                                            </div>                                    
-                                        </div><!--end form-group--> 
-            
-                                        <div class="form-group">
-                                            <label for="userpassword">Password</label>                                            
-                                            <div class="input-group mb-3">                                                       
-                                                <input type="password" class="form-control" name="password" placeholder="Enter password" required>
-                                            </div>                               
-                                        </div><!--end form-group--> 
-            
-                                        <div class="form-group row mt-4">
-                                            <div class="col-sm-6">
-                                                <div class="custom-control custom-switch switch-success">
-                                                    <input type="checkbox" class="custom-control-input" id="customSwitchSuccess">
-                                                    <!--<label class="custom-control-label text-muted" for="customSwitchSuccess">Remember me</label>-->
-                                                </div>
-                                            </div>
-                                           
-                                            <!--<div class="col-sm-6 text-right">
-                                                <a href="auth-recover-pw.html" class="text-muted font-13"><i class="dripicons-lock"></i> Forgot password?</a>                                    
-                                            </div> --> 
-                                        </div><!--end form-group--> 
-            
-                                        <div class="form-group mb-0 row">
-                                            <div class="col-12 mt-2">
-                                                <button class="btn btn-gradient-primary btn-round btn-block waves-effect waves-light" type="submit">Log In </button>
-                                            </div><!--end col--> 
-                                        </div> <!--end form-group-->                           
-                                    </form><!--end form-->
-                                </div><!--end /div-->
-                                
-                                <div class="m-3 text-center text-muted">
-                                    <p class="">Don't have an account ?  <a href="/register" class="text-primary ml-2">Free Resister</a></p>
+<!-- Log In page -->
+<div class="container">
+    <div class="row vh-100 ">
+        <div style="margin-left: 300px;" class="col-6 align-self-center">
+            <div class="auth-page">
+                <div class="card auth-card shadow-lg">
+                    <div style="width: 500px;" class="card-body">
+                        <div class="px-3">
+
+                            <div class="text-center auth-logo-text">
+                                <h4 class="mt-0 mb-3 mt-5">Pragmatech Blog</h4>
+                                <p class="text-muted mb-0">Login Page</p>
+                            </div>
+                            <!--end auth-logo-text-->
+
+
+                            <form class="form-horizontal auth-form my-4" method="POST" novalidate>
+                                {{form.csrf_token}}
+
+                                <div class="form-group">
+                                    <label for="username">Username</label>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" name="username"
+                                            placeholder="Enter username" required>
+                                    </div>
                                 </div>
-                            </div><!--end card-body-->
-                        </div><!--end card-->
-                    </div><!--end auth-page-->
-                </div><!--end col-->           
-            </div><!--end row-->
-        </div><!--end container-->
-        <!-- End Log In page -->
+                                <!--end form-group-->
+
+                                <div class="form-group">
+                                    <label for="userpassword">Password</label>
+                                    <div class="input-group mb-3">
+                                        <input type="password" class="form-control" name="password"
+                                            placeholder="Enter password" required>
+                                    </div>
+                                </div>
+                                <!--end form-group-->
+
+                                <div class="form-group row mt-4">
+                                    <div class="col-sm-6">
+                                        <div class="custom-control custom-switch switch-success">
+                                            <input type="checkbox" class="custom-control-input"
+                                                id="customSwitchSuccess">
+                                            <!--<label class="custom-control-label text-muted" for="customSwitchSuccess">Remember me</label>-->
+                                        </div>
+                                    </div>
+
+                                    <!--<div class="col-sm-6 text-right">
+                                                <a href="auth-recover-pw.html" class="text-muted font-13"><i class="dripicons-lock"></i> Forgot password?</a>                                    
+                                            </div> -->
+                                </div>
+                                <!--end form-group-->
+
+                                <div class="form-group mb-0 row">
+                                    <div class="col-12 mt-2">
+                                        <button
+                                            class="btn btn-gradient-primary btn-round btn-block waves-effect waves-light"
+                                            type="submit">Log In </button>
+                                    </div>
+                                    <!--end col-->
+                                </div>
+                                <!--end form-group-->
+                            </form>
+                            <!--end form-->
+                        </div>
+                        <!--end /div-->
+
+                        <div class="m-3 text-center text-muted">
+                            <p class="">Don't have an account ? <a href="/register" class="text-primary ml-2">Free
+                                    Resister</a></p>
+                        </div>
+                    </div>
+                    <!--end card-body-->
+                </div>
+                <!--end card-->
+            </div>
+            <!--end auth-page-->
+        </div>
+        <!--end col-->
     </div>
-	{% endblock %}
+    <!--end row-->
+</div>
+<!--end container-->
+<!-- End Log In page -->
+</div>
+{% endblock %}
